fix overlapping text in mobile view

--- a/styling.css
+++ b/styling.css
@@ -1,6 +1,8 @@
 
 .funding-div2 {
   visibility: hidden;
+  width: 0;
+  height: 0;
 }
 
 .nav{
@@ -262,7 +264,7 @@
 
 .hard-img {
   width: 150px;
-  margin-top: -30px;
+  margin-top: 0px;
   float: right;
 }
 
@@ -550,7 +552,7 @@
     background-color: rgb(250, 233, 241);
     height: 90px;
     font-family: sans-serif;
-    font-size: 12px;
+    font-size: 8px;
     border-bottom: 1px solid rgb(252, 192, 222);
     margin-top: 2px;
   }
@@ -565,12 +567,12 @@
     color: red;
     font-size: 15px;
     font-weight: bold;
-  }
+  } 
 
   .hard-img {
     width: 150px;
-    margin-top: -30px;
     float: right;
+    margin-top: 0;
   }
 
   .hard-a {
